--- a/index.html
+++ b/index.html
@@ -5,29 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Pathway+Gothic+One');
+      @import url('https://fonts.googleapis.com/css?family=Anton|Pathway+Gothic+One');
+      </style>
+
     <title>Document</title>
   </head>
   <body>
-    <header>
-      
-    </header>
+    <header id="home">
+      <div class="video">
+      <video src="media/Video_Header.mp4" control loop muted autoplay></video>
+    </div>
+    <div class="nav">
+      <ul>
+        <li>PORTFOLIO</li>
+        <li>CONTACT</li>
+      </ul>
+    </div>
+    <div class="logo"><a href="#home"><img src="media/LOGO.png"></a></div>
+    <div class="text">
+      <h1>Lorem, ipsum.</h1>
+      <h2>Lorem, ipsum dolor.</h2>
+    </div>
+      </header>
     <section>
         <div class="container-card">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><div class="overlay">Lorem.</div></li>
+                <li><div class="overlay">Lorem.</div></li>
+                <li><div class="overlay">Lorem.</div></li>
             </ul>
             <ul>
-                    <li></li>
-                    <li id="little"></li>
-                    <li></li>
+                    <li><div class="overlay">Lorem.</div></li>
+                    <li id="little"><div class="overlay">Lorem.</div></li>
+                    <li><div class="overlay">Lorem.</div></li>
                 </ul>
                 <ul>
-                        <li></li>
-                        <li id="big"></li>
-                        <li></li>
+                        <li><div class="overlay">Lorem.</div></li>
+                        <li id="big"><div class="overlay">Lorem.</div></li>
+                        <li><div class="overlay">Lorem.</div></li>
                     </ul>
     </section>
+    <footer>
+      <div class="logo"><a href="#home"><img src="media/LOGO.png"></a></div>
+      <ul>
+        <li><img src="media/insta.png">Lorem, ipsum</li>
+        <li><img src="media/mail.png" alt="mail">Lorem, ipsum.</li>
+      </ul>
+    </footer>
   </body>
 </html>
